--- a/index.html
+++ b/index.html
@@ -1,76 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>¿La juventud ya no quiere tener hijos?</title>
-  <link rel="stylesheet" href="EstiloHuellitas.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PlantandoTuHuellita</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <header>
+        <img src="logo-huella.png" alt="Logo PlantandoTuHuellita" class="logo">
+        <h1>PlantandoTuHuellita</h1>
+        <p>Donde las patitas se convierten en flores 🌱🐾</p>
+        <video autoplay muted loop class="banner-video">
+            <source src="video-presentacion.mp4" type="video/mp4">
+            Tu navegador no soporta el video.
+        </video>
+    </header>
 
-  <header>
-    <h1>¿La juventud ya no quiere tener hijos?</h1>
-    <p>Una mirada al cambio de prioridades y al crecimiento del mercado de mascotas</p>
-  </header>
+    <main>
+        <section class="datos">
+            <h2>¿Por qué los jóvenes ya no quieren hijos?</h2>
+            <ul>
+                <li>✔️ Enfoque en desarrollo personal y profesional</li>
+                <li>✔️ Inestabilidad económica</li>
+                <li>✔️ Estilo de vida flexible</li>
+                <li>✔️ Preocupación ambiental y sobrepoblación</li>
+            </ul>
+        </section>
 
-  <section>
-    <h2>📉 Tendencias actuales</h2>
-    <ul>
-      <li>✔️ En Latinoamérica, cada vez más jóvenes deciden no tener hijos o los postergan.</li>
-      <li>✔️ <strong>Factores principales:</strong></li>
-      <ul>
-        <li>✅ Desarrollo personal y profesional.</li>
-        <li>✅ Inestabilidad económica.</li>
-        <li>✅ Estilo de vida flexible.</li>
-        <li>✅ Preocupación ambiental y sobrepoblación.</li>
-      </ul>
-    </ul>
-  </section>
+        <section class="estadisticas">
+            <h2>Datos en Perú</h2>
+            <p>📉 La tasa de fecundidad bajó de 3.5 (1980) a 2.1 (2020)</p>
+            <p>📊 El 30% de jóvenes entre 20-30 años no desea tener hijos</p>
+        </section>
 
-  <section>
-    <h2>📊 Datos en Perú</h2>
-    <ul>
-      <li>🔹 La tasa de fecundidad bajó de 3.5 (1980) a 2.1 (2020), y sigue bajando. (Fuente: BID)</li>
-      <li>🔹 Entre jóvenes de 20-30 años, la preferencia por no tener hijos creció un 30% en los últimos 10 años. (INEI)</li>
-    </ul>
-  </section>
+        <section class="servicios">
+            <h2>La mascota como parte de la familia</h2>
+            <p>🐶 7 de cada 10 jóvenes en Lima ven a su mascota como un "hijo"</p>
+            <p>💰 Gastan entre S/150 a S/300 mensuales en sus cuidados</p>
+        </section>
 
-  <section>
-    <h2>🐶 La mascota como “hijo”</h2>
-    <ul>
-      <li>✔️ Jóvenes y solteros ven a sus mascotas como parte de la familia.</li>
-      <li>📌 7 de cada 10 jóvenes en Lima consideran a su mascota como un hijo. (PUCP 2023)</li>
-      <li>📌 Gastan entre S/150 a S/300 mensuales en cuidados.</li>
-    </ul>
-  </section>
+        <section class="producto">
+            <h2>Oportunidad de Negocio</h2>
+            <p>🌎 Más de 2.5 millones de mascotas en Lima</p>
+            <p>🚀 El mercado crece un 20% cada año (Kantar, 2023)</p>
+            <p>🌿 Servicios premium como memoriales ecológicos, comida gourmet y más</p>
+        </section>
 
-  <section>
-    <h2>📈 Crecimiento del mercado de mascotas</h2>
-    <ul>
-      <li>🚀 Se proyecta un crecimiento del 20% anual del mercado en Perú. (Kantar, 2023)</li>
-      <li>🐾 Más de 2.5 millones de mascotas solo en Lima.</li>
-      <li>💼 Aumento de servicios premium: veterinaria, estética, gourmet, cremaciones, memoriales.</li>
-    </ul>
-  </section>
+        <section class="resumen">
+            <h2>Resumen</h2>
+            <p><strong>PlantandoTuHuellita</strong> transforma la despedida de una mascota en una nueva vida, a través de compostaje y siembra de árboles. Ideal para jóvenes que ven a sus mascotas como familia.</p>
+        </section>
 
-  <section>
-    <h2>💡 Oportunidad de negocio</h2>
-    <ul>
-      <li>✅ Mayor demanda por servicios personalizados para mascotas.</li>
-      <li>✅ Inversión emocional y económica alta en el bienestar de las mascotas.</li>
-      <li>✅ Creciente interés por soluciones sostenibles.</li>
-      <li>✅ El cuidado postpandemia aumentó la adopción y el vínculo con las mascotas.</li>
-    </ul>
-  </section>
+        <section class="qr">
+            <h3>Contáctanos o paga con Yape</h3>
+            <img src="qr-yape.png" alt="QR Yape" class="qr-img">
+            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20más%20información%20sobre%20PlantandoTuHuellita" target="_blank">Hablar por WhatsApp</a>
+        </section>
+    </main>
 
-  <section class="resumen">
-    <h2>⭐ Resumen clave</h2>
-    <p><strong>Hoy, la juventud prefiere tener mascotas en lugar de hijos</strong> y las consideran parte de la familia. Este cambio social impulsa la creación de servicios especiales para mascotas, como memoriales ecológicos. Con más de 2.5 millones de mascotas solo en Lima y un mercado en crecimiento del 20% anual, <strong>PlantandoTuHuellita</strong> se posiciona como una opción innovadora y rentable en el futuro cercano.</p>
-  </section>
-
-  <footer>
-    🌱 Proyecto: PlantandoTuHuellita – Donde las patitas se convierten en flores
-  </footer>
-
+    <footer>
+        <p>&copy; 2025 PlantandoTuHuellita - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
