--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlantandoTuHuellita</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="EstiloHuellitas.css">
 </head>
 <body>
     <header>
-        <img src="logo-huella.png" alt="Logo PlantandoTuHuellita" class="logo">
+        <img src="logo-huella.jpeg" alt="Logo PlantandoTuHuellita" class="logo">
         <h1>PlantandoTuHuellita</h1>
         <p>Donde las patitas se convierten en flores 🌱🐾</p>
         <video autoplay muted loop class="banner-video">
-            <source src="video-presentacion.mp4" type="video/mp4">
+            <source src="Banner.mp4" type="video/mp4">
             Tu navegador no soporta el video.
         </video>
     </header>
@@ -54,8 +54,8 @@
 
         <section class="qr">
             <h3>Contáctanos o paga con Yape</h3>
-            <img src="qr-yape.png" alt="QR Yape" class="qr-img">
-            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20más%20información%20sobre%20PlantandoTuHuellita" target="_blank">Hablar por WhatsApp</a>
+            <img src="qr-huella.png" alt="QR Yape" class="qr-img">
+            <a class="btn" href="https://santiagosea.github.io/PlantaTuHuella/" target="_blank">SITIO WEB</a>
         </section>
     </main>
 
