--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlantandoTuHuellita</title>
+    <title>PlantandoTuHuella</title>
     <link rel="stylesheet" href="EstiloHuellitas.css">
 </head>
 <body>
     <header>
-        <img src="logo-huella.jpeg" alt="Logo PlantandoTuHuellita" class="logo">
-        <h1>PlantandoTuHuellita</h1>
-        <p>Donde las patitas se convierten en flores 🌱🐾</p>
-        <video autoplay muted loop class="banner-video">
-            <source src="Banner.mp4" type="video/mp4">
-            Tu navegador no soporta el video.
-        </video>
-    </header>
+    <img src="logo-huella.png" alt="Logo PlantandoTuHuellita" class="logo">
+    <h1>PlantandoTuHuellita</h1>
+    <p>Donde las patitas se convierten en flores 🌱🐾</p>
+    <video autoplay muted loop class="banner-video">
+        <source src="Banner.mp4" type="video/mp4">
+        Tu navegador no soporta el video.
+    </video>
+</header>
+
 
     <main>
         <section class="datos">
