--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <img src="logo-huella.png" alt="Logo PlantandoTuHuellita" class="logo">
+    <img src="logo-huella.jepg" alt="Logo PlantandoTuHuellita" class="logo">
     <h1>PlantandoTuHuellita</h1>
     <p>Donde las patitas se convierten en flores 🌱🐾</p>
     <video autoplay muted loop class="banner-video">
