--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="EstiloHuellitas.css">
 </head>
 <body>
-    <header>
-    <img src="logo-huella.jepg" alt="Logo PlantandoTuHuellita" class="logo">
+   <header>
+   <img src="logo-huella.jpeg" alt="PlantandoTuHuella" class="logo">
     <h1>PlantandoTuHuellita</h1>
     <p>Donde las patitas se convierten en flores 🌱🐾</p>
     <video autoplay muted loop class="banner-video">
-        <source src="Banner.mp4" type="video/mp4">
+        <source src="video-presentacion.mp4" type="video/mp4">
         Tu navegador no soporta el video.
     </video>
 </header>
+
 
 
     <main>
