--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="qr">
             <h3>Contáctanos o paga con Yape</h3>
             <img src="qr-huella.png" alt="QR Yape" class="qr-img">
-            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20la%20Sombra%20AstroLover%20de%20Huellitas%20Beauty" target="_blank">Contactenos</a>
+            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20adqyuirir%20el%20servicio%20de%20de%PlantaTuHuella" target="_blank">Contactenos</a>
         </section>
     </main>
 
