--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>PlantandoTuHuellita</h1>
     <p>Donde las patitas se convierten en flores 🌱🐾</p>
     <video autoplay muted loop class="banner-video">
-        <source src="video-presentacion.mp4" type="video/mp4">
+        <source src="Banner.mp4" type="video/mp4">
         Tu navegador no soporta el video.
     </video>
 </header>
