--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         </section>
 
         <section class="qr">
-            <h3>Contáctanos o paga con Yape</h3>
+            <h3>Adquiere nuestros servicios</h3>
             <img src="qr-huella.png" alt="QR Yape" class="qr-img">
             <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20adqyuirir%20el%20servicio%20de%20de%PlantaTuHuella" target="_blank">Contactenos</a>
+            
         </section>
     </main>
 
