--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <header>
    <img src="logo-huella.jpeg" alt="PlantandoTuHuella" class="logo">
-    <h1>PlantandoTuHuellita</h1>
+    <h1>PlantandoTuHuella</h1>
     <p>Donde las patitas se convierten en flores 🌱🐾</p>
     <video autoplay muted loop class="banner-video">
             <source src="Banner.mp4" type="video/mp4">
@@ -51,13 +51,14 @@
 
         <section class="resumen">
             <h2>Resumen</h2>
-            <p><strong>PlantandoTuHuellita</strong> transforma la despedida de una mascota en una nueva vida, a través de compostaje y siembra de árboles. Ideal para jóvenes que ven a sus mascotas como familia.</p>
+            <p><strong>PlantandoTuHuella</strong> transforma la despedida de una mascota en una nueva vida, a través de compostaje y siembra de árboles. Ideal para jóvenes que ven a sus mascotas como familia.</p>
         </section>
 
         <section class="qr">
             <h3>Adquiere nuestros servicios</h3>
             <img src="qr-huella.png" alt="QR Yape" class="qr-img">
-            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20adqyuirir%20el%20servicio%20de%20de%PlantaTuHuella" target="_blank">Contactenos</a>
+            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20adqyuirir%20el%20servicio%20de%20de%PlantaTuHuella"</a>
+            <p>target="_blank">Contactenos</p>
             
         </section>
     </main>
