--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section class="qr">
             <h3>Adquiere nuestros servicios</h3>
-            <img src="qr-hellita" alt="QR Yape" class="qr-img">
+            <img src="qr-hellita.png" alt="QR Yape" class="qr-img">
             <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20adquirir%20el%20servicio%20de%20de%PlantaTuHuella" target="_blank">Contactenos</a>
         
             
