--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <section class="qr">
             <h3>Adquiere nuestros servicios</h3>
             <img src="qr-hellita.png" alt="QR Yape" class="qr-img">
-            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20adquirir%20el%20servicio%20de20%PlantaTuHuella" target="_blank">Contactenos</a>
+            <a class="btn" href="https://wa.me/51995859227?text=Hola,%20quiero%20adquirir%20el%20servicio%20de%20PlantaTuHuella" target="_blank">Contactenos</a>
         
             
         </section>
